sorted by most minutes

--- a/day4/src/index.html
+++ b/day4/src/index.html
@@ -19,7 +19,9 @@
   font-weight: 500;
     }
 .event-list {
-  width: 300px
+  width: 300px;
+  height: 200px;
+  overflow: auto;
 }
 </style>
 </head>
