--- a/day4/src/index.html
+++ b/day4/src/index.html
@@ -19,8 +19,14 @@
   font-weight: 500;
     }
 .event-list {
-  width: 300px;
-  height: 200px;
+  width: 100%;
+  height: 420px;
+  overflow: auto;
+}
+
+.guard-table {
+  width: 100%;
+  height: 420px;
   overflow: auto;
 }
 </style>
